  * Virtual Console/Slider: send feedback on override button press
  * Virtual Console/Sped Dial: fix foreground color setting on Windows
  * Plugins/OS2L: fix receiving multiple messages at once
  * Web Access: reworked websocket implementation
  * Web Access: fix grand master stopping running functions
  * Web Access: fix simple desk not resetting the current universe
  * RGB scripts: added 'Sine Wave' script
  * RGB scripts: fix Vertical Fall not allowing changing color when cloned
  * New fixtures: GLP Impression X5, Ayrton Rivale Profile, Ayrton Kyalami (thanks to Masatoshi Fujino)
  * New fixture: Eurolite LED Mini Strobe Cluster SMD 48 (thanks to Oliver)
  * New fixture: Ayra Compar Kit 3 (thanks to Robert)
  * New fixtures: Acme Pixel Line IP, Ayrton Domino LT (thanks to Yestalgia)
  * New fixture: GLP JDC1 (thanks to Flo Edelmann)
  * New fixture: Shehds 2 Eyes 200W LED COB Cool Warm White (thanks to Devsider)
  * New fixture: Ayra ERO Micro Beam FX (thanks to Gianni)
  * New fixture: Shehds LED Wall Wash 18x18W RGBWA+UV (thanks to Fede79)
  * New fixture: Shehds LED Beam 12x12W RGBW (thanks to Lukas Hanisch)
  * New fixture: Chauvet EVE P-160 RGBW (thanks to Max Wheatley)
  * New fixture: Stairville Wild Wash 132 LED CW (thanks to e-shock)
  * New fixture: Showtec Luna Par 120 Q4, Showtec Phantom 180 Wash, Stairville Infinite Pixel 250
  * New fixture: Ghost Lumy (thanks to Manu)
  * New fixture: Shehds LED 200W RGB FLASH, GalaxyJet LED Beam 300W Beam&Spot&Wash, Constellaser 12W Waterproof Scan Laser (thanks to Tóth János)

  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 29 Dec 2024 18:19:20 +0200

qlcplus (4.13.1) stable; urgency=low

  * engine: fix blackout not working
  * engine: include relative EFX in blackout
  * engine: fix RGB Matrix clone control mode
  * Show Manager: improve resume after pause
  * Show Manager: don't freeze on infinite duration Chasers/Sequences
  * Virtual Console: fix OSC feedback regression